@@ -2,16 +2,18 @@ package com.soon.petpi.service;
 
 import com.soon.petpi.exception.type.NoPetError;
 import com.soon.petpi.model.dto.pet.PetCalenderResponse;
-import com.soon.petpi.model.dto.pet.PetRequest;
+import com.soon.petpi.model.dto.pet.request.PetRequest;
+import com.soon.petpi.model.dto.pet.request.PetUpdateForm;
 import com.soon.petpi.model.dto.pet.PetResponse;
+import com.soon.petpi.model.dto.pet.request.PetSaveForm;
 import com.soon.petpi.model.entity.Pet;
 import com.soon.petpi.model.entity.User;
 import com.soon.petpi.repository.PetRepository;
+import com.soon.petpi.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
-import java.io.File;
 import java.io.IOException;
 import java.util.Collections;
 import java.util.List;
@@ -25,59 +27,63 @@ public class PetService {
 
     private final PetRepository petRepository;
     private final FileStoreService fileStoreService;
+    private final UserRepository userRepository;
 
-    public Pet save(User user, PetRequest petRequest) throws IOException {
+    public Pet save(Long userIdx, PetSaveForm petSaveForm) throws IOException {
 
-        Pet pet = petRequestToPet(petRequest);
-        pet.setUser(user);
+        User petOwner = userRepository.findById(userIdx).orElse(null);
+
+        Pet pet = petRequsetToPet(petSaveForm);
+        pet.setUser(petOwner);
 
         petRepository.save(pet);
 
         return pet;
     }
 
-    public List<PetResponse> findAll(User user) {
-
-        Optional<List<Pet>> petsOptional = petRepository.findByUser(user);
-        return petsOptional.map(pets ->
-                pets.stream().map(this::petToPetResponse)
-                        .collect(Collectors.toList()))
-                .orElse(Collections.emptyList());
+    public List<Pet> findAll(Long userIdx) {
+        return petRepository.findByUserIdx(userIdx).orElse(null);
     }
 
-    public Pet findOne(Long petIdx) {
-        return petRepository.findById(petIdx).orElse(null);
-    }
+    public Pet findOne(Long petIdx, Long userIdx) {
+        Pet pet = petRepository.findByIdAndUserIdx(petIdx, userIdx).orElse(null);
 
-    public Pet update(Long petIdx, PetRequest petRequest) throws IOException {
-
-        Pet savedPet = findOne(petIdx);
-
-        if (savedPet == null) {
+        if (pet == null) {
             throw new NoPetError();
         }
+        return pet;
+    }
 
-        if (savedPet.getPetImage() !=null && petRequest.getPetImage().equals(savedPet.getPetImage())) {
-            fileStoreService.delete(savedPet.getPetImage());
+    public Pet update(Long petIdx, Long userIdx, PetUpdateForm petUpdateForm) throws IOException {
+
+        Pet savedPet = findOne(petIdx, userIdx);
+
+        log.info(petUpdateForm.toString());
+
+        // PetUpdateForm 변경 값이 존재하는 지 판단하고 해당 부분만을 수정
+        if (petUpdateForm.getPetName() != null) {
+            savedPet.setPetName(petUpdateForm.getPetName());
         }
-
-        // Pet 객체 업데이트
-        savedPet.setPetName(petRequest.getPetName());
-        savedPet.setPetImage(fileStoreService.uploadFile(petRequest.getPetImage()).getStoreName());
-        savedPet.setPetGender(petRequest.getPetGender());
-        savedPet.setPetSpecies(petRequest.getPetSpecies());
-        savedPet.setPetBirthdate(petRequest.getPetBirthdate());
+        if (petUpdateForm.getPetImage() != null) {
+            fileStoreService.delete(savedPet.getPetImage());
+            savedPet.setPetImage(fileStoreService.uploadFile(petUpdateForm.getPetImage()).getStoreName());
+        }
+        if (petUpdateForm.getPetGender() != null) {
+            savedPet.setPetGender(petUpdateForm.getPetGender());
+        }
+        if (petUpdateForm.getPetSpecies() != null) {
+            savedPet.setPetSpecies(petUpdateForm.getPetSpecies());
+        }
+        if (petUpdateForm.getPetBirthdate() != null) {
+            savedPet.setPetBirthdate(petUpdateForm.getPetBirthdate());
+        }
 
         return petRepository.save(savedPet);
     }
 
-    public Boolean delete(Long petIdx) {
+    public Boolean delete(Long petIdx, Long userIdx) {
 
-        Pet deletePet = findOne(petIdx);
-
-        if (deletePet==null) {
-            throw new NoPetError();
-        }
+        Pet deletePet = findOne(petIdx, userIdx);
 
         if (deletePet.getPetImage() != null) {
             fileStoreService.delete(deletePet.getPetImage());
@@ -88,8 +94,10 @@ public class PetService {
         return true;
     }
 
-    public PetCalenderResponse readCalender(Long petIdx) {
-        Pet savedPet = petRepository.findByIdCalender(petIdx).orElse(null);
+    public PetCalenderResponse readCalender(Long petIdx, Long userIdx) {
+
+        Pet savedPet = petRepository.findByIdCalenderAndUserIdx(petIdx, userIdx).orElse(null);
+
         if (savedPet == null) {
             throw new NoPetError();
         }
@@ -97,8 +105,9 @@ public class PetService {
         return petToPetCalenderResponse(savedPet);
     }
 
-    public PetResponse petToPetResponse(Pet pet) {
+    public PetResponse petToPetResponse(Pet pet, Long userIdx) {
         return PetResponse.builder()
+                .userIdx(userIdx)
                 .petIdx(pet.getPetIdx())
                 .petSpecies(pet.getPetSpecies())
                 .petBirthdate(pet.getPetBirthdate())
@@ -108,14 +117,14 @@ public class PetService {
                 .build();
     }
 
-    public Pet petRequestToPet(PetRequest petRequest) throws IOException {
+    public Pet petRequsetToPet(PetRequest request) throws IOException {
         return Pet.builder()
-                .petName(petRequest.getPetName())
-                .petSpecies(petRequest.getPetSpecies())
-                .petBirthdate(petRequest.getPetBirthdate())
-                .petImage(fileStoreService.uploadFile(petRequest.getPetImage())
+                .petName(request.getPetName())
+                .petSpecies(request.getPetSpecies())
+                .petBirthdate(request.getPetBirthdate())
+                .petImage(fileStoreService.uploadFile(request.getPetImage())
                         .getStoreName())
-                .petGender(petRequest.getPetGender())
+                .petGender(request.getPetGender())
                 .build();
     }
 
@@ -131,7 +140,7 @@ public class PetService {
                                 .diseaseName(disease.getDiseaseName())
                                 .diseaseLabel(disease.getDiseaseLabel())
                                 .build()
-                ).collect(Collectors.toList()))
+                ).toList())
 
                 .calenderHealthStatuses(pet.getHealthStatuses().stream().map(
                         health -> PetCalenderResponse.CalenderHealthStatuses.builder()
@@ -141,7 +150,7 @@ public class PetService {
                                 .petPoo(health.getPetPoo())
                                 .petPee(health.getPetPee())
                                 .build()
-                ).collect(Collectors.toList()))
+                ).toList())
                 .build();
     }
 }
